# repo-test

./: README.md  main.py  pyproject.toml  test_main.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md
.github/workflows/: codeql.yml  pr-validation.yml  python-package.yml  test-matrix.yml
scripts/: check_gpl_headers.py  run_checks.py
src/vaultlint/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_main.py
